--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body style="font-family: Arial, sans-serif; text-align: center; margin-top: 100px;">
   <h1>Verify Your UW NetID</h1>
   <p>Click the button below to sign in with your UW NetID.</p>
-  <a href="https://accounts.google.com/o/oauth2/v2/auth?client_id=798434793477-augpu4jllhh993gv5vjiq0fnj0bk72d6.apps.googleusercontent.com&redirect_uri=https%3A%2F%2Fghend23.github.io%2Fuw-discord-verify%2Fcallback.html&response_type=code&scope=openid%20email%20profile&access_type=offline&prompt=consent
+  <a href="https://accounts.google.com/o/oauth2/v2/auth?client_id=798434793477-augpu4jllhh993gv5vjiq0fnj0bk72d6.apps.googleusercontent.com&redirect_uri=https%3A%2F%2Fghend23.github.io%2Fuw_discord_verify%2Fcallback.html&response_type=code&scope=openid%20email%20profile&access_type=offline&prompt=consent
 " 
      style="background-color: #4caf50; color: white; padding: 15px 30px; 
             text-decoration: none; font-size: 18px; border-radius: 5px;">
